# alt-dex

./: .gitignore  README.md  alt-dex.cabal  cabal.project  default.nix  flake.nix  hie.yaml  shell.nix  update-sha256map.sh
cli/: Main.hs  serve.hs
nix/: README.md  ci.nix  haskell.nix  sources.json  update.nix
nix/pkgs/haskell/: haskell.nix
pab/: Main.hs  SimulatorActions.hs
roundtrip-demo/: Main.hs
sample/: tokens.csv
scripts/: Main.hs
src/AltDex/: Contracts.hs  WalletLog.hs
src/AltDex/CLI/: Common.hs  Environment.hs  Error.hs  Node.hs
src/AltDex/Contracts/: Base.hs  Common.hs  LiquidityPool.hs  Mint.hs  MintTrace.hs  Monetary.hs  OffChain.hs  OnChain.hs  PubKey.hs  Serialise.hs  Swap.hs  deleted.hs
src/AltDex/Roundtrip/: CreatePool.hs  Hardcoded.hs  MintTokens.hs  Nami.hs
src/AltDex/Roundtrip/PAB/: Contracts.hs  Run.hs
web/: altswap-create-pool.sh  altswap-lock-nft-to-script.sh  altswap-mint-nft.sh  altswap-mint-tokens.sh  altswap-script-balance.sh  gen-payment-addr.sh  next.config.js  package.json  query.sh  t.sh  tsconfig.json  tx.build  tx.signed  wallet-balance.sh
web/components/: Image.tsx  Link.tsx
web/components/Layout/: Layout.tsx
web/context/: cardano-wasm.tsx  nami-wallet.tsx
web/graphql/: client.ts  scriptUtxos.ts
web/hooks/: useOnClickOutside.ts
web/lib/: coinSelection.js  create-lp-no-cs.ts  create-lp.ts  datums.ts  redeemers.ts  swap-no-cs.ts  utils.ts
web/lib/tx-builder/: client.ts  index.ts  types.ts
web/page-components/: constants.ts  styles.ts  types.ts
web/page-components/add-liquidity/: AddLiquidityPage.tsx  util.ts
web/page-components/create-liquidity-pool/: CreateLiquidityPool.tsx  styled.ts  util.ts
web/page-components/create-liquidity-pool/TokenSelector/: TokenSelector.tsx  styled.ts
web/page-components/index/: IndexPage.tsx  styled.ts
web/page-components/swap/: SwapPage.tsx  styled.ts
web/page-components/swap/SwapInput/: SwapInput.tsx  styled.ts
web/pages/: _app.tsx  add-liquidity.tsx  create-liquidity-pool.tsx  index.tsx  swap.tsx
web/pages/api/: pools.ts
web/plutus/: altswap-create-pool-redeemer.json  altswap-lp-create-factory-datum.json  altswap-lp-create-pool-datum.json  altswap.plutus.js  create-lp.plutus.js  mint-tokens.plutus.js  redeemer-void.json
web/plutus-scripts/: altswap-lp-create-mint.plutus  altswap-nft.plutus  altswap-tokens.plutus  altswap.plutus
web/policy/: altswapTokensPolicyID  policy.skey  policy.vkey  policyID  swap-nft-policy-id
web/styles/: globals.css
web/tmp/: script_0jvzyp3yk.json  script_6iuic6drd.json  script_6j99fhmpt.json  script_721zesxt5.json  script_ac0shqfb2.json  script_j6uomjprn.json  script_kt79k06fg.json  script_q05r003fh.json  script_qf2s4i2r8.json  script_qzdtwbqp8.json  script_tcb6p6c7z.json  script_vdnw639cj.json  script_w13p9c2ue.json  script_wvmqtpjrc.json  tx_03446puzj.raw  tx_0hrwk7hwl.signed  tx_0t76ov00d.signed  tx_0y86ihnus.raw  tx_0zdtcfbc7.raw  tx_14xzgacmh.raw  tx_179fporet.signed  tx_19hm6wf25.raw  tx_1e5hfejsl.raw  tx_1esw24ai8.raw  tx_1mggll3kh.signed  tx_1nletuzdo.signed  tx_1q9ybw4gx.signed  tx_1qb0s60b4.signed  tx_1xrog3wh8.signed  tx_237zj6lp9.raw  tx_3s8364qqw.signed  tx_3um2ctpxo.signed  tx_3yrrlkqop.signed  tx_3zitrd1mk.signed  tx_4fiuaan6r.signed  tx_4gzu0vsrs.signed  tx_4hztb9t23.signed  tx_4p5zsaoos.raw  tx_4wicowutn.raw  tx_56vm5xllb.signed  (+153 more)
web/util/: nami-utils.ts  object-utils.ts
web/util/ts-belt/: Array.ts  Boolean.ts  Dict.ts  Option.ts
web/wallet/: altswap_script.addr  payment.addr  payment.skey  payment.vkey  stake.skey  stake.vkey
web/wallets/: igor-pay.addr  igor-pay.skey  igor-pay.vkey  igor-stake.skey  igor-stake.vkey  igor2-pay.addr  igor2-pay.skey  igor2-pay.vkey  igor2-stake.skey  igor2-stake.vkey
