cabal-version:      2.4
name:               alt-dex
version:            0.1.0.0
license:            Apache-2.0
license-files:      LICENSE
author:             AltLabs
maintainer:         igor@altlabs.dev

flag defer-plugin-errors
    description:
        Defer errors from the plugin, useful for things like Haddock that can't handle it.
    default: False
    manual: True

source-repository this
    type: git
    location: https://github.com/alt-labs/alt-dex
    branch: main

common base
  build-depends:
    base
    , aeson
    , ansi-terminal
    , bytestring
    , containers
    , data-default
    , extra
    , freer-simple
    , mtl
    , openapi3
    , playground-common
    , plutus-core
    , plutus-contract
    , plutus-ledger
    , plutus-tx
    , plutus-ledger-api
    , plutus-chain-index
    , plutus-tx-plugin
    , plutus-pab
    , plutus-use-cases
    , prettyprinter
    , pretty-show
    , row-types
    , stm
    , lens
    , tasty
    , tasty-hunit
    , text
    , freer-extras
    , insert-ordered-containers
    , serialise
    , cardano-api
    , cardano-ledger-alonzo
    , purescript-bridge
    , transformers
    -- wbe testing stuff
    , memory
    , req
    , lens-aeson
    , base16-bytestring
    , ouroboros-consensus-shelley
    , cardano-ledger-core
    , yaml
    , purescript-bridge

common lang
    default-language: Haskell2010
    default-extensions: ExplicitForAll ScopedTypeVariables
                        DeriveGeneric StandaloneDeriving DeriveLift
                        GeneralizedNewtypeDeriving DeriveFunctor DeriveFoldable
                        DeriveTraversable
    ghc-options: -Wall
                 -Wnoncanonical-monad-instances
                 -Wincomplete-uni-patterns
                 -Wincomplete-record-updates
                 -Wredundant-constraints
                 -Widentities
                 -fobject-code
                 -fno-ignore-interface-pragmas
                 -fno-omit-interface-pragmas

    if flag(defer-plugin-errors)
        ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

common lang-ext
    default-extensions:
      BangPatterns
      ExplicitForAll
      FlexibleContexts
      ScopedTypeVariables
      DerivingStrategies
      DeriveAnyClass
      DeriveGeneric
      StandaloneDeriving
      DeriveLift
      GeneralizedNewtypeDeriving
      DeriveFunctor
      DeriveFoldable
      DeriveTraversable
      LambdaCase
      MonoLocalBinds
      MultiParamTypeClasses
      NoImplicitPrelude
      RecordWildCards
      OverloadedStrings
      TypeFamilies
      QuasiQuotes
      TemplateHaskell
      DataKinds
      TypeOperators
      TypeApplications
      FlexibleInstances
      TypeSynonymInstances
      TupleSections
      NumericUnderscores
      ImportQualifiedPost
      RankNTypes
      NamedFieldPuns

library
    import: base, lang-ext
    exposed-modules:
      AltDex.Contracts.PubKey
      AltDex.Contracts.Base
      AltDex.Contracts.Common
      AltDex.Contracts.Monetary
      AltDex.Contracts.LiquidityPool
      AltDex.Contracts.Swap
      AltDex.Contracts.OffChain
      AltDex.Contracts.OnChain
      AltDex.Contracts.Serialise
      AltDex.WalletLog
      AltDex.Contracts.MintTrace
      AltDex.CLI.Common
      AltDex.CLI.Environment
      AltDex.CLI.Error
      AltDex.CLI.Node
      -- AltDex.Roundtrip.PAB.Run
      -- AltDex.Roundtrip.PAB.Contracts
      -- AltDex.Roundtrip.Nami
    build-depends:
      base >= 4.9 && < 5,
      directory,
      filepath,
      aeson,
      aeson-pretty -any,
      containers,
      text,
      stm -any,
      unix,
      lens -any,
      bytestring,
      bytestring-encoding,
      playground-common,
      plutus-contract,
      plutus-chain-index,
      plutus-tx-plugin,
      plutus-tx,
      plutus-ledger,
      plutus-ledger-constraints,
      plutus-pab,
      playground-common -any,
      openapi3 -any,
      prettyprinter,
      serialise -any,
      cardano-ledger-alonzo -any,
      plutus-ledger-api -any,
      cardano-api -any,
      ouroboros-consensus,
      shh,
      time,
      iso8601-time
      -- plutus-use-cases -any
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options:
            -- See Plutus Tx readme
            -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fplugin-opt PlutusTx.Plugin:defer-errors -haddock

-- test-suite alt-dex-test
--   type: exitcode-stdio-1.0
--   main-is: Spec.hs
--   hs-source-dirs: specs
--   other-modules:
--     CurrencySpec
--     SwapSpec
--   default-language: Haskell2010
--   default-extensions: ExplicitForAll ScopedTypeVariables
--                         DeriveGeneric StandaloneDeriving DeriveLift
--                         GeneralizedNewtypeDeriving DeriveFunctor DeriveFoldable
--                         DeriveTraversable
--   ghc-options: -Wall -Wnoncanonical-monad-instances
--               -Wincomplete-uni-patterns -Wincomplete-record-updates
--               -Wredundant-constraints -Widentities
--               -- See Plutus Tx readme
--               -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
--   if flag(defer-plugin-errors)
--     ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

--   build-depends:
--     plutus-tx -any,
--     plutus-tx-plugin,
--     plutus-contract -any,
--     plutus-ledger -any,
--     plutus-starter -any,
--     plutus-chain-index,
--     cardano-api,
--     lens -any,
--     aeson-pretty -any,
--     freer-simple -any,
--     prettyprinter -any,
--     containers,
--     text
--   build-depends:
--     base >=4.9 && <5,
--     QuickCheck,
--     tasty -any,
--     tasty-hunit -any,
--     tasty-hedgehog >=0.2.0.0,
--     tasty-quickcheck

executable alt-dex
  import: base
  other-modules:
    SimulatorActions
  main-is: Main.hs
  hs-source-dirs: pab
  ghc-options:
    -threaded
  build-depends:
    base >= 4.9 && < 5,
    directory,
    filepath,
    containers,
    text -any,
    lens -any,
    bytestring -any,
    bytestring-encoding,
    stm -any,
    unix,
    plutus-contract -any,
    plutus-chain-index,
    cardano-api,
    plutus-pab -any,
    aeson -any,
    aeson-pretty -any,
    freer-simple -any,
    prettyprinter -any,
    freer-extras -any,
    plutus-ledger -any,
    row-types -any,
    playground-common -any,
    data-default -any,
    alt-dex -any
    -- plutus-use-cases -any

-- executable alt-dex-purple
--   import:               base, lang
--   hs-source-dirs:       app
--   main-is:              create-pool.hs
--   ghc-options:          -threaded -rtsopts "-with-rtsopts=-T"
--   build-depends:        aeson
--                       , cardano-api
--                       , cardano-ledger-alonzo
--                       , plutus-ledger
--                       , plutus-ledger-api
--                       , plutus-tx
--                       , bytestring
--                       , serialise -any
--                       , alt-dex -any

-- executable altdex-cli
--   import:               base, lang
--   hs-source-dirs:       cli
--   main-is:              main.hs
--   ghc-options:          -threaded -rtsopts "-with-rtsopts=-T"
--   build-depends:        aeson
--                       , cardano-api
--                       , wai -any
--                       , cardano-ledger-alonzo
--                       , plutus-ledger
--                       , plutus-ledger-api
--                       , plutus-tx
--                       , bytestring
--                       , serialise -any
--                       , alt-dex -any

executable roundtrip-demo
  import:               base, lang
  import:               lang-ext
  hs-source-dirs:       roundtrip-demo
  main-is:              Main.hs
  ghc-options:          -threaded -rtsopts "-with-rtsopts=-T"

  main-is: roundtrip-demo/Main.hs
  build-depends: alt-dex -any

executable scripts
  import:               base, lang
  import:               lang-ext
  hs-source-dirs:       scripts
  main-is:              Main.hs
  ghc-options:          -threaded -rtsopts "-with-rtsopts=-T"

  build-depends: alt-dex -any,
                 foldl, flat, streaming, directory, filepath

executable adex
  import:               base, lang
  import:               lang-ext
  hs-source-dirs:       cli
  main-is:              Main.hs
  ghc-options:          -threaded -rtsopts "-with-rtsopts=-T"

  build-depends: alt-dex -any,
                 foldl, flat, streaming, directory, filepath, vector, cassava, split,
                 cardano-cli